--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -25,11 +25,12 @@ Since: `Jun 2016`      Licence: `MIT`
 
 Deliveria is a *desktop application* that allows a *delivery manager* to *manage and assign delivery tasks* efficiently. While it consists of a _Graphical User Interface_ (GUI) that is user-friendly, Deliveria is *optimized for those who prefer* to work with a _Command Line Interface_ (CLI) which allows fast management of the delivery tasks in an organisation.
 
+
+// tag::getting-started[]
 == Getting Started
 .UI
 image::Ui.png[Ui]
-[caption="Figure 1: ",link="Ui.png"]
-
+[caption="Figure 1:",link="Ui.png"]
 === Installing
 . Ensure you have Java 11 or above installed in your Computer.
 . Download the latest release https://github.com/AY1920S1-CS2103T-F14-4/main/releases[here].
@@ -48,6 +49,7 @@ date today. Press Enter to execute the command.
 * You can see the newly created task in the Incomplete Delivery Task box:
 
 
+.The new task shows up in the Incomplete Tasks box
 image::user-guide/adding-task.png[width=50%, scaledwidth=12cm, align="center"]
 
 [NOTE]
@@ -59,7 +61,10 @@ Take note of the Task ID (i.e. #6), which is used to refer to this task.
 
 * You can see Task #6 is assigned to Aloysius Chan at 2:00PM - 4:00PM
 
+.The task is successfully scheduled
 image::user-guide/suggest-task.png[width=70%, scaledwidth=12cm, align="center"]
+[NOTE]
+The suggested time slot will either start from now or in the future.
 
 [NOTE]
 We will optimize the driver and the time based on the drivers' availability and the task. Learn more about the rule in <<Automatically scheduling a task: `suggest`>>
@@ -74,10 +79,13 @@ Learn more about the `assign` command in <<Manually assigning a task: `assign`>>
 
 * We now have rescheduled the task to 3-4 pm.
 
+.The task is rescheduled
 image::user-guide/reschedule-task.png[width=70%, scaledwidth=12cm, align="center"]
 
 
 You have created and scheduled your first task! Refer to <<Features>>  for details of each command.
+// end::getting-started[]
+
 
 [[Features]]
 == Features
@@ -159,7 +167,7 @@ j
 
 Find the most suitable driver and an available time slot to schedule a task, based on the following rules.
 
-* If there are drivers who deliver to the same customer as the one in this task, the driver who has the earliest available time slot for this task will be selected
+* If there are drivers who deliver to the same customer as the one in this task, the driver who has the earliest available time slot for this task will be selected.
 * If the above rule fails to select a driver, the system will choose among all drivers, and find the driver who has the earliest available time slot for the task.
 
 Format: `suggest HOURS t/TASK_ID`
@@ -168,6 +176,7 @@ Format: `suggest HOURS t/TASK_ID`
 * The `HOURS` field is in the format of `hh:MM` or in decimal format. For example, one and a half hours can either be `1:30` or `1.5`.
 * The `TASK_ID` is a positive integer, and the task must exist in the Incomplete Tasks.
 * Use the `assign` command if you want to assign the task to a specific driver at a specific time.
+* The suggested time slot will only start from now or in the future.
 ****
 
 Examples:
@@ -188,7 +197,8 @@ Assign a driver to a task with a proposed time. +
 Format: `assign [force] t/TASK_ID d/DRIVER_ID at/hMM - hMM`
 
 ****
-* You cannot assign a time that clashes with the driver's existing schedule, or is outside their working hours
+* You cannot assign a time that clashes with the driver's existing schedule, or is outside their working hours (9 AM - 9 PM)
+* You cannot propose a time slot that started in the past
 * If there is an earlier time slot that the driver is available,
 the program will suggest the earlier time slot 
 * Use `assign force` to overwrite a task which already has a driver and a scheduled time 
