--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -23,34 +23,41 @@ Since: `Jun 2016`      Licence: `MIT`
 
 == Introduction
 
-Deliveria is a *desktop application* that allows a *delivery manager* to *manage and assign delivery tasks* efficiently. While it consists of a _Graphical User Interface_ (GUI) that is user-friendly, Deliveria is *optimized for those who prefer* to work with a _Command Line Interface_ (CLI) which allows fast management of the delivery tasks in an organisation.
+Deliveria is a *desktop application* that allows a *delivery manager* to *manage and assign delivery tasks* efficiently.
+While it consists of a _Graphical User Interface_ (GUI) that is user-friendly, Deliveria is *optimized for those who prefer* to work with a _Command Line Interface_ (CLI) which allows fast management of the delivery tasks in an organisation.
 
 
 // tag::getting-started[]
 == Getting Started
+
 .UI
 image::Ui.png[Ui]
+
 [caption="Figure 1:",link="Ui.png"]
 === Installing
+
 . Ensure you have Java 11 or above installed in your Computer.
 . Download the latest release https://github.com/AY1920S1-CS2103T-F14-4/main/releases[here].
 . Copy the file to the folder you want to use as the home folder for your Deliveria.
-. Double-click the file to start the app. The GUI should appear in a few seconds.
-
+. Double-click the file to start the app.
+The GUI should appear in a few seconds.
 
 === Scheduling Your First Task
-Now you are in! We have prepared a few sample customers and drivers for you to play around.
 
-On a busy day, you might be having many orders coming in, and you want to get your drivers busy delivering them. Let's
-go through the process of creating and assigning a task.
+Now you are in!
+We have prepared a few sample customers and drivers for you to play around.
 
-* Create a new task by typing `addT g/20 boxes of utensils c/1 dt/22/11/2019` in the command box. You need to substitute `22/11/2019` with the
-date today. Press Enter to execute the command.
+On a busy day, you might be having many orders coming in, and you want to get your drivers busy delivering them.
+Let's go through the process of creating and assigning a task.
+
+* Create a new task by typing `addT g/20 boxes of utensils c/1 dt/22/11/2019` in the command box.
+You need to substitute `22/11/2019` with the date today.
+Press Enter to execute the command.
 * You can see the newly created task in the Incomplete Delivery Task box:
 
 
 .The new task shows up in the Incomplete Tasks box
-image::user-guide/adding-task.png[width=50%, scaledwidth=12cm, align="center"]
+image::user-guide/adding-task.png[width=50%,scaledwidth=12cm,align="center"]
 
 [NOTE]
 Take note of the Task ID (i.e. #6), which is used to refer to this task.
@@ -62,12 +69,14 @@ Take note of the Task ID (i.e. #6), which is used to refer to this task.
 * You can see Task #6 is assigned to Aloysius Chan at 2:00PM - 4:00PM
 
 .The task is successfully scheduled
-image::user-guide/suggest-task.png[width=70%, scaledwidth=12cm, align="center"]
+image::user-guide/suggest-task.png[width=70%,scaledwidth=12cm,align="center"]
+
 [NOTE]
 The suggested time slot will either start from now or in the future.
 
 [NOTE]
-We will optimize the driver and the time based on the drivers' availability and the task. Learn more about the rule in <<Automatically scheduling a task: `suggest`>>
+We will optimize the driver and the time based on the drivers' availability and the task.
+Learn more about the rule in <<Automatically scheduling a task: `suggest`>>
 
 * If you are not satisfied with the suggestion, you can overwrite it by typing `assign force t/6 d/1 at/1500 - 1600`, where:
 - `6` is the Task ID
@@ -80,10 +89,11 @@ Learn more about the `assign` command in <<Manually assigning a task: `assign`>>
 * We now have rescheduled the task to 3-4 pm.
 
 .The task is rescheduled
-image::user-guide/reschedule-task.png[width=70%, scaledwidth=12cm, align="center"]
+image::user-guide/reschedule-task.png[width=70%,scaledwidth=12cm,align="center"]
 
 
-You have created and scheduled your first task! Refer to <<Features>>  for details of each command.
+You have created and scheduled your first task!
+Refer to <<Features>>  for details of each command.
 // end::getting-started[]
 
 
@@ -101,7 +111,6 @@ For example, to edit the description of the delivery task (Task ID:3) : `editT 3
 ====
 
 === General Commands
-
 
 ==== Viewing help : `help`
 
@@ -135,7 +144,8 @@ Adds a delivery task to the task manager. +
 Format: `addT [g/DESCRIPTION OF GOODS] [c/CUSTOMER ID] [dt/DATE OF DELIVERY]`
 
 ****
-* DATE OF DELIVERY must be today onwards. Date format: d/M/yyyy.
+* DATE OF DELIVERY must be today onwards.
+Date format: d/M/yyyy.
 * All fields are compulsory.
 ****
 
@@ -150,7 +160,8 @@ Edits a existing delivery task in the task manager. +
 Format: `editT [TASK ID] [g/DESCRIPTION OF GOODS] [c/CUSTOMER ID] [dt/DATE OF DELIVERY]`
 
 ****
-* Edited DATE OF DELIVERY must be today onwards. Date format: d/M/yyyy.
+* Edited DATE OF DELIVERY must be today onwards.
+Date format: d/M/yyyy.
 * Only indicate fields that you want to change.
 ****
 
@@ -173,7 +184,8 @@ Find the most suitable driver and an available time slot to schedule a task, bas
 Format: `suggest HOURS t/TASK_ID`
 
 ****
-* The `HOURS` field is in the format of `hh:MM` or in decimal format. For example, one and a half hours can either be `1:30` or `1.5`.
+* The `HOURS` field is in the format of `hh:MM` or in decimal format.
+For example, one and a half hours can either be `1:30` or `1.5`.
 * The `TASK_ID` is a positive integer, and the task must exist in the Incomplete Tasks.
 * Use the `assign` command if you want to assign the task to a specific driver at a specific time.
 * The suggested time slot will only start from now or in the future.
@@ -199,9 +211,8 @@ Format: `assign [force] t/TASK_ID d/DRIVER_ID at/hMM - hMM`
 ****
 * You cannot assign a time that clashes with the driver's existing schedule, or is outside their working hours (9 AM - 9 PM)
 * You cannot propose a time slot that started in the past
-* If there is an earlier time slot that the driver is available,
-the program will suggest the earlier time slot 
-* Use `assign force` to overwrite a task which already has a driver and a scheduled time 
+* If there is an earlier time slot that the driver is available, the program will suggest the earlier time slot
+* Use `assign force` to overwrite a task which already has a driver and a scheduled time
 * The `TASK_ID` is a positive integer, and the task must exist in the Incomplete Tasks.
 * The `DRIVER_ID` is a positive integer, and the driver must exist in the driver list.
 ****
@@ -265,8 +276,10 @@ Deletes a task / driver / customer from its respective managers. +
 Format: `del [c/CUSTOMER ID]` | `del [t/DRIVER ID]` | `del [t/TASK ID]`
 
 ****
-* Cannot delete a *DELIVERY TASK* that is on-going. Remove the driver from the task first before deleting.
-* Cannot delete a *DRIVER* that is assigned to a on-going task. Remove the driver from the task first before deleting.
+* Cannot delete a *DELIVERY TASK* that is on-going.
+Remove the driver from the task first before deleting.
+* Cannot delete a *DRIVER* that is assigned to a on-going task.
+Remove the driver from the task first before deleting.
 ****
 
 Examples:
@@ -295,6 +308,7 @@ Examples:
 View the tasks delivered by the driver (Driver ID: 1).
 
 ==== Saves assigned delivery tasks for a specific date into PDF document: `savepdf`
+
 The PDF document is arranged in a table format to allow easy reference of the delivery tasks that is assigned to each drivers for the date.
 Its purpose is for user reference and archive. +
 Refer to <<PdfLayout>> for sample. +
@@ -314,9 +328,7 @@ Saves the assigned delivery tasks in PDF format for today.
 * `savepdf 20/10/2019` +
 Saves the assigned delivery tasks in PDF format for 20/10/2019.
 
-
 === Customer Management Commands
-
 
 ==== Add a Customer `addC`
 
@@ -331,9 +343,7 @@ Examples:
 
 * `addC n/John Doe p/98765432 e/johnd@example.com a/311, Clementi Ave 2, #02-25 t/friends`
 
-
 === Driver Management Commands
-
 
 ==== Add a Driver `addD`
 
@@ -359,11 +369,13 @@ There is no need to save manually.
 *A*: Install the app in the other computer and overwrite the empty data file it creates with the data file in your previous computer.
 
 *Q*: Where is the saved file at? +
-*A*:  It is located in the same folder where the .jar file is. There will be a folder called `data`.
+*A*: It is located in the same folder where the .jar file is.
+There will be a folder called `data`.
 
 *Q*: How do I know the list of commands? +
 *A*: The `help` command will give a list of available commands.
 
 == Appendix
+
 .PDF Document generated by `savepdf` command
-image::/images/DeliveryTasks_Pdf_Layout.png[id="PdfLayout", Delivery Tasks PDF]
+image::/images/DeliveryTasks_Pdf_Layout.png[id="PdfLayout",Delivery Tasks PDF]
