--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -219,6 +219,7 @@ Saves the assigned delivery tasks in PDF format for 20/10/2019.
 === Customer Management Commands
 
 
+// tag::addc-command[]
 ==== Add a Customer `addC`
 
 Adds customer to the customer manager. +
@@ -231,7 +232,9 @@ Format: `addC [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAGS]`
 Examples:
 
 * `addC n/John Doe p/98765432 e/johnd@example.com a/311, Clementi Ave 2, #02-25 t/friends`
+// end::addc-command[]
 
+// tag::viewcw-command[]
 ==== View full Customer details `viewCW`
 Opens a separate window with all Customer details and a map showing location of Customer Address. +
 Format: `viewCW CUSTOMERID`
@@ -246,10 +249,10 @@ Working internet connection and valid address is needed for map to work.
 Examples:
 
 * `viewCW 1`
-
+// end::viewcw-command[]
 === Driver Management Commands
 
-
+// tag::addd-command[]
 ==== Add a Driver `addD`
 
 Adds driver to the driver manager. +
@@ -262,7 +265,8 @@ Format: `addD [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [t/TAGS]`
 Examples:
 
 * `addD n/John Doe p/98765432 e/johnd@example.com a/311, Clementi Ave 2, #02-25 t/friends`
-
+// end::addd-command[]
+// tag::viewdw-command[]
 ==== View full Driver details `viewDW`
 Opens a separate window with all Driver details +
 Format: `viewDW DRIVERID`
@@ -274,7 +278,7 @@ Format: `viewDW DRIVERID`
 Examples:
 
 * `viewDW 1`
-
+// end::viewdw-command[]
 == Saving the data
 
 Deliveria data are saved in the hard disk automatically after any command that changes the data. +
