--- a/docs/team/samyj2606.adoc
+++ b/docs/team/samyj2606.adoc
@@ -26,7 +26,7 @@ _
 
 * *Minor enhancement*: added a Driver rating system and a notification window that shows incomplete tasks from previous days.
 
-* *Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] _{give links to collated code files}_
+* *Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]]
 
 * *Other contributions*:
 
