--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -91,6 +91,8 @@ Learn more about the `assign` command in <<Manually assigning a task: `assign`>>
 .The task is rescheduled
 image::user-guide/reschedule-task.png[width=70%,scaledwidth=12cm,align="center"]
 
+[NOTE]
+The drivers, by default, works from 9 AM to 9 PM. You cannot assign a time beyond the working hours.
 
 You have created and scheduled your first task!
 Refer to <<Features>>  for details of each command.
