--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -159,7 +159,7 @@ Classes used by multiple components are in the `seedu.addressbook.commons` packa
 This section describes some noteworthy details on how certain features are implemented.
 
 
-// tag::task-scheduling[]
+// tag::driver-task-scheduling[]
 === Driver-Level Task Scheduling
 
 ==== Design Considerations
@@ -201,6 +201,8 @@ Similarly, calling `free` command will:
 
 * Remove the existing `EventTime` from the `Driver` 's `Schedule`
 * Set the `Driver` and `EventTime` attributes to `null`
+// end::driver-task-scheduling[]
+// tag::task-scheduling[]
 
 === Global-Level Task Scheduling
 
