--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -66,7 +66,7 @@ For example, to edit the description of the delivery task (Task ID:3) : `editT 3
 
 List all available commands +
 Format: `help`
-
+// tag::go-command[]
 ==== Navigate between tabs : `go`
 
 Navigates to the specified tab Tl state. +
@@ -75,7 +75,7 @@ Examples:
 
 * `go statistic`
 * `go home`
-
+// end::go-command[]
 ==== Lists all Task / Driver / Customer : `list`
 
 Displays all Task / Customer / Driver list in it's original state. +
@@ -203,7 +203,7 @@ Examples:
 Deletes task (Task ID: 1) from the task manager.
 * `del d/2` +
 Deletes driver (Driver ID: 2) from the driver manager.
-
+// tag::viewC-command[]
 ==== Views completed delivery tasks delivered to Customer
 
 Displays a list of completed tasks delivered to the customer, located in the completed delivery list under History tab.
@@ -221,7 +221,7 @@ Examples:
 
 * `viewD 1` +
 View the tasks delivered by the driver (Driver ID: 1).
-
+// end::viewC-command[]
 ==== Saves assigned delivery tasks for a specific date into PDF document: `savepdf`
 The PDF document is arranged in a table format to allow easy reference of the delivery tasks that is assigned to each drivers for the date.
 Its purpose is for user reference and archive. +
